[gd_scene load_steps=11 format=3 uid="uid://dopqc0nhfwmq2"]

[ext_resource type="SpriteFrames" uid="uid://dl8ajg3obksrr" path="res://assets/spriteframes/popcat.tres" id="1_6a5kr"]
[ext_resource type="PackedScene" uid="uid://wg3uykey4c0u" path="res://scenes/health.tscn" id="2_t1fyd"]
[ext_resource type="Script" path="res://scripts/components/KillComponent.gd" id="3_hyktn"]
[ext_resource type="Script" path="res://scripts/components/AnimationStateComponent.gd" id="4_bvjag"]
[ext_resource type="PackedScene" path="res://scenes/entity_detection_component.tscn" id="5_a0fjm"]
[ext_resource type="Script" path="res://scripts/components/StatBlockComponent.gd" id="6_qnrlf"]
[ext_resource type="Script" path="res://scripts/components/logics/SimpleTargetingLogic.gd" id="7_mikb2"]
[ext_resource type="Script" path="res://scripts/components/ElementalAffinityComponent.gd" id="8_npxxo"]
[ext_resource type="Texture2D" uid="uid://buru837yustnm" path="res://assets/img/pentagram.png" id="9_todcu"]


[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kejoo"]
radius = 13.0
height = 52.0

[node name="enemy_body" type="CharacterBody2D" groups=["Enemy"]]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = ExtResource("1_6a5kr")
animation = &"idle_1"
autoplay = "idle_1"


[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kejoo")

[node name="TargetingGizmo" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 80, 0)
default_color = Color(1, 0, 0, 1)
end_cap_mode = 2

[node name="HealthComponent" parent="." instance=ExtResource("2_t1fyd")]
offset_left = -35.3333
offset_top = -73.3333
offset_right = 28.6667
offset_bottom = -65.3333
health_per_inch = 2

[node name="KillComponent" type="Node2D" parent="."]
script = ExtResource("3_hyktn")

[node name="AnimationStateComponent" type="Node2D" parent="."]
script = ExtResource("4_bvjag")

[node name="EntityDetectionComponent" parent="." instance=ExtResource("5_a0fjm")]
scale = Vector2(1.3, 0.2)
detectionTarget = "Friendly"

[node name="StatBlockComponent" type="Node2D" parent="."]
script = ExtResource("6_isrlf")
movespeed = 50
attackRange = 80

[node name="SimpleTargetingLogic" type="Node2D" parent="."]
script = ExtResource("7_mikb2")

[node name="ElementalAffinityComponent" type="Node2D" parent="."]
script = ExtResource("8_npxxo")

[node name="ElementIndicator" type="Sprite2D" parent="ElementalAffinityComponent"]
texture_filter = 1
position = Vector2(0, 22)
scale = Vector2(0.15, 0.15)
texture = ExtResource("9_todcu")
